  - CWString hat Konstruktor für std::wstring bekommen und Operator für
    std::ostream
  - Bugfix in CString::IsNumeric und CWString::IsNumeric
  - CWString: Vergleichsoperatoren für CWString und einige weitere Funktionen
    sind jetzt als "const" deklariert
  - Bugfix in CWString::Chomp: Es konnten zu viele Zeichen abgeschnitten werden

Version 6.4.15 vom 30.04.2013	(SVN-Tag: REL_6_4_15)
  - CLog-Klasse unterstützt nun Syslog

Version 6.4.14 vom 21.03.2013	(CVS-Tag: REL_6_4_14)
  - Bugfix beim Einlesen von ID3-Tag-Covern mit UTF-16-Encoding
  - Bugfix: Potentieller Memory-Leak in CTCPSocket::WaitForMessage gefixt
  - Bugfix: Fehler im Aufbau der verketteten Liste der Klasse CSSL behoben
  - Change: CSSL verwendet malloc und free statt CHeap
  - Bugfix: CTCPSocket: Beim Disconnect oder Shutdown wurde kein SSL_Stop
    aufgerufen. Dadurch konnte der SSL-Stack durcheinander kommen.
  
Version 6.4.13  vom 27.07.2012	(CVS-Tag: REL_6_4_13)
  - Kleinere Kompatibilitätsprobleme unter Windows behoben
  - Fehler in Postgres-DB-Anbindung behoben, wodurch mit FetchArray
    oder FetchFields mehr Zeilen gelesen wurden, als im
    Result vorhanden war
  - DB-Connect mit Postgres-Datenbank unterstützt jetzt Parameter
    "searchpath" zum Setzen des Suchpfades.
  - CString unterstützt Ausgabe als Stream
  - Erkennung der FreeTDS-Library für Sybase erneuert 
  - CDateTime Genauigkeit auf Mikrosekunden erhöht
  - Format des Integer-Wertes von CDateTime::longInt hat sich geändert
    und ist inkompatibel zu vorher.
  - Testsuite mit Unittests für CDateTime erstellt (Verwendung von
    Google-Test)
  - Bugfix in CString::PregReplace

Version 6.4.12  vom 04.04.2012	(CVS-Tag: REL_6_4_12)
  - Datenbank: Strings werden nun in Hochkommata statt Anführungszeichen
    gesetzt
  - Datenbank: Datentypen werden in Abhängigkeit ihres Types und der
    Datenbank escaped und gequoted. Neue Funktion Database::getQuoted
  - Datenbank: Mutexe aus den Datenbanken entfernt. Die Anwendung ist